# Shell

./: .gitignore  Makefile  README.md  builtin.c  builtin.h  headerDependencies.h  main.c  main.h  meson.build  output
include/: absolutePath.h  builtin.h  callBuiltin.h  cd.h  environmentVariable.h  execute.h  headerDependencies.h  history.h  jobControl.h  ls.h  main.h  nightswatch.h  parser.h  utils.h
src/: absolutePath.c  builtin.c  callBuiltin.c  cd.c  environmentVariable.c  execute.c  history.c  jobControl.c  ls.c  main.c  nightswatch.c  parser.c  utils.c
