project('output', 'c')
inc = include_directories('include')

sources = ['src/builtin.c', 'src/history.c', 'src/main.c', 'src/environmentVariable.c', 'src/ls.c', 'src/cd.c', 'src/absolutePath.c', 'src/nightswatch.c', 'src/utils.c','src/jobControl.c', 'src/execute.c', 'src/callBuiltin.c', 'src/parser.c']

executable('output', sources, include_directories: inc)
